--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,10 +46,17 @@ dependencies {
 
 
     implementation 'com.github.JakeWharton:ViewPagerIndicator:2.4.1'
-
     implementation 'sun.bob:mcalendarview:1.0.0'
-
     implementation 'com.zarinpal:purchase:0.0.9'
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
+
+
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
+
+
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+
 
 
 
