--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,8 @@ dependencies {
 
     implementation 'com.android.support:recyclerview-v7:28.0.0'
 
+    implementation 'net.gotev:uploadservice:2.1'
+
 
 
 
