--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,21 +4,43 @@ android {
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
     defaultConfig {
-        applicationId "com.example.testbuild"
-        minSdkVersion 24
+        applicationId "com.apsent.villapp"
+        minSdkVersion 28
         targetSdkVersion 29
         versionCode 1
-        versionName "1.0"
+        versionName "0.1"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
+    signingConfigs {
+        if (project.hasProperty('keystorePassword')) {
+            release {
+                storeFile file(property('keystoreFile'))
+                storePassword property('keystorePassword')
+                keyAlias property('keystoreAlias')
+                keyPassword property('keystorePassword')
+            }
+        }
+    }
+
     buildTypes {
         release {
+            debuggable false
+            jniDebuggable false
+            renderscriptDebuggable false
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            proguardFile 'proguard-rules.pro'
+            zipAlignEnabled true
+            if (project.hasProperty('keystorePassword')) {
+                //noinspection GroovyAssignabilityCheck
+                signingConfig signingConfigs.release
+            }
+        }
+        debug {
+            applicationIdSuffix ".debug"
+            testCoverageEnabled true
         }
     }
 }
-
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'androidx.appcompat:appcompat:1.0.2'
@@ -59,7 +81,9 @@ dependencies {
 
     implementation 'net.gotev:uploadservice:2.1'
 
-
-
+}
+configurations {
+    all*.exclude group: 'com.squareup.okio'
+    all*.exclude group: 'com.android.support', module: 'support-v17'
 
 }
